# gitvite

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.env  pyproject.toml
examples/: example.env
src/: main.py
src/schema/: __init__.py  information.py  response.py
src/util/: __init__.py  cli.py  github.py  worker.py
