[tool.poetry]
name = "gitvite"
version = "1"
description = "Making GitHub invitation with Excel file"
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
pandas = "^1.4.3"
pydantic = "^1.9.1"
requests = "^2.28.1"
email-validator = "^1.2.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
